<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@drawable/gradient_bg"
        android:gravity="center"
        tools:context=".ui.CreateAccountActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/username_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:hint="@string/username_text"
                android:inputType="textEmailAddress"
                android:layout_margin="18dp"
                android:maxLines="1"/>

            <AutoCompleteTextView
                android:id="@+id/email_create_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_margin="18dp"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/password_create_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:maxLines="1"/>

            <ProgressBar
                android:id="@+id/progress_bar_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                android:id="@+id/acc_createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:text="@string/create_account"/>
        </LinearLayout>
    </LinearLayout>