<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/remove_confirm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/are_you_sure"
            android:textSize="19sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/yes_remove_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remove_confirm_text"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/centerGColor"
            android:text="@string/yes"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/no_remove_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remove_confirm_text"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/centerGColor"
            android:text="@string/no"
            android:textColor="@android:color/white" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>