<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".ui.PostJournalActivity">

    <ImageView
        android:id="@+id/post_background_imageView"
        android:layout_width="393dp"
        android:layout_height="262dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/title_postJournal"
        android:layout_width="377dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:hint="@string/title"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/outline_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_background_imageView" />

    <AutoCompleteTextView
        android:id="@+id/thoughts_postJournal"
        android:layout_width="377dp"
        android:layout_height="66dp"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:inputType="textMultiLine"
        android:hint="@string/your_thoughts"
        android:background="@drawable/outline_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_postJournal" />


    <Button
        android:id="@+id/post_save_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/post_cameraButton"
        android:layout_width="104dp"
        android:layout_height="104dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/post_background_imageView"
        app:layout_constraintBottom_toBottomOf="@id/post_background_imageView"
        app:layout_constraintRight_toRightOf="@id/post_background_imageView"
        app:layout_constraintLeft_toLeftOf="@id/post_background_imageView"/>

    <TextView
        android:id="@+id/post_username_textView"
        android:layout_width="109dp"
        android:layout_height="35dp"
        android:layout_marginBottom="68dp"
        android:text="@string/gina"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/post_background_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="@+id/post_background_imageView" />

    <TextView
        android:id="@+id/post_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/today"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/post_background_imageView"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="@+id/post_background_imageView"
        app:layout_constraintTop_toBottomOf="@+id/post_username_textView" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="88dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toTopOf="@+id/post_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thoughts_postJournal"
        app:layout_constraintVertical_bias="0.345" />

</androidx.constraintlayout.widget.ConstraintLayout>